GenericSupplier - функция createWindow актуализирована для версий Java старше 9